--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -10,7 +10,7 @@
   z-index: 999;
 }
 
-@media (max-width:985px) {
+@media (max-width: 985px) {
   .stickyHeader {
     display: none;
   }
@@ -20,7 +20,7 @@
   }
 
   .content {
-    padding: 50px 20px 20px !important;
+    padding: 50px 0 20px !important;
 
     .childrenContent {
       width: 100vw !important;
@@ -40,11 +40,9 @@
   .rightContent {
     display: none;
   }
-
-
 }
 
-@media (min-width:985px) {
+@media (min-width: 985px) {
   .childrenContent {
     padding: 10px 20px;
   }
@@ -83,7 +81,6 @@
   position: relative;
   min-height: 280px;
   display: flex;
-
 
   .childrenContent {
     width: 60vw;
@@ -137,7 +134,6 @@
   margin: 30px 0 10px;
   padding-top: 24px;
 }
-
 
 .mobileHeader {
   display: none;
