--- a/src/components/PageTitle/index.less
+++ b/src/components/PageTitle/index.less
@@ -8,18 +8,17 @@
     font-weight: 700;
 
     &::before {
-      content: '\300c';
-      color: #daa520;
+      content: "\300c";
+      color: var(--primary-color);
       margin: 0 0.3em;
       font-weight: 800;
     }
 
     &::after {
-      content: '\300d';
-      color: #daa520;
+      content: "\300d";
+      color: var(--primary-color);
       margin: 0 0.3em;
       font-weight: 800;
     }
   }
-
 }
