--- a/src/components/GTitle/index.less
+++ b/src/components/GTitle/index.less
@@ -11,8 +11,8 @@
     height: 0.8em;
     bottom: 0.2em;
     width: 100%;
-    background-color: #daa520;
-    opacity: .7;
+    background-color: #1677ff;
+    opacity: 0.7;
     z-index: -1;
     bottom: 0 !important;
     height: 0.5em !important;
