--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -1,5 +1,5 @@
 .footer {
-  padding: 1em 0;
+  padding: 1em 0 2.4em;
   line-height: 1.5;
   text-align: center;
   position: absolute;
@@ -7,4 +7,5 @@
   left: 0;
   right: 0;
   width: 100%;
+  margin: 20px 0;
 }
