--- a/src/pages/article/detail/index.less
+++ b/src/pages/article/detail/index.less
@@ -1,7 +1,28 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.detail {
+  text-align: center;
+  animation: fadeIn 0.5s;
+}
+
 .cover {
   max-height: 300px;
   object-fit: cover;
   vertical-align: top;
   margin-bottom: 10px;
   border-radius: 15px;
+}
+
+.content {
+  padding: 1em 1em 3em;
+  text-align: center;
+  font-size: 1.3em;
 }
