--- a/src/pages/home/components/Nav/index.less
+++ b/src/pages/home/components/Nav/index.less
@@ -19,6 +19,8 @@
   flex-direction: column;
   padding: 1.2em;
   animation: fadeIn 1.3s;
+  height: 130px;
+  overflow: hidden;
 
   h2 {
     font-size: 1.3em;
