--- a/src/pages/article/detail/index.less
+++ b/src/pages/article/detail/index.less
@@ -26,3 +26,12 @@
   text-align: center;
   font-size: 1.3em;
 }
+
+.text {
+  font-size: 16px;
+  text-indent: 3em;
+}
+
+.date {
+  text-align: center;
+}
