--- a/src/components/AutoPlayIMG/index.less
+++ b/src/components/AutoPlayIMG/index.less
@@ -4,3 +4,15 @@
   object-fit: cover;
   vertical-align: top;
 }
+
+@media (max-width: 460px) {
+  .imgStyle {
+    max-height: 256px;
+  }
+}
+
+@media (min-width: 460px) {
+  .imgStyle {
+    max-height: 300px;
+  }
+}
