--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -1,5 +1,5 @@
 .footer {
-  padding: 1em 0 2.4em;
+  // padding: 1em 0 2.4em;
   line-height: 1.5;
   text-align: center;
   position: absolute;
@@ -8,5 +8,5 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  margin: 20px 0;
+  // margin: 20px 0;
 }
