--- a/src/global.less
+++ b/src/global.less
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: NotoSerif;
-  src: url("http://rluot02vo.hd-bkt.clouddn.com/fonts/Stone-Serif-Sem-ITC-TT-Semi.ttf")
+  src: url("http://cdn.boyxy.cn/fonts/Stone-Serif-Sem-ITC-TT-Semi.ttf")
     format("woff2");
   font-weight: 600;
   font-size: 18px;
@@ -13,8 +13,7 @@
 
 @font-face {
   font-family: ZCOOLXiaoWei;
-  src: url("http://rluot02vo.hd-bkt.clouddn.com/fonts/ZCOOLXiaoWei-Regular.ttf")
-    format("woff2");
+  src: url("http://cdn.boyxy.cn/fonts/ZCOOLXiaoWei-Regular.ttf") format("woff2");
 }
 
 @import "~video-react/dist/video-react.css";
@@ -234,6 +233,7 @@ img {
   transition-property: border, opacity, color;
   box-sizing: border-box;
   transition: 0.3s;
+  white-space: nowrap;
 
   &:hover {
     border-color: var(--primary-color);
