--- a/src/pages/article/detail/index.less
+++ b/src/pages/article/detail/index.less
@@ -18,7 +18,7 @@
   object-fit: cover;
   vertical-align: top;
   margin-bottom: 10px;
-  border-radius: 15px;
+  // border-radius: 15px;
 }
 
 .content {
