--- a/src/global.less
+++ b/src/global.less
@@ -316,3 +316,12 @@ img {
 .note-masonry-grid {
   display: flex;
 }
+
+.nav {
+  transition: all 0.5s;
+}
+
+.visible {
+  transition: all 0.5s;
+  display: none;
+}
