--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -131,6 +131,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 
     &:hover {
       border: none;
@@ -308,4 +309,8 @@
   .comment-children {
     padding-left: 3.5em;
   }
+}
+
+.open {
+  display: none;
 }
